2006-01-14  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/javax/print/SimpleDoc/: New directory.
	* gnu/testlet/javax/print/SimpleDoc/constructor.java,
	* gnu/testlet/javax/print/SimpleDoc/getAttributes.java, 
	* gnu/testlet/javax/print/SimpleDoc/getReaderForText.java,
	* gnu/testlet/javax/print/SimpleDoc/getStreamForBytes.java: New tests.

2006-01-13  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/javax/print/attribute/standard,
	* gnu/testlet/javax/print/attribute/standard/MediaSize: New directories.
	* gnu/testlet/javax/print/attribute/standard/MediaSize/userClass.java: 
	New test. 

2006-01-13  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/text/SimpleAttributeSet/addAttribute.java: New file,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/addAttributes.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/clone.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/constructors.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/containsAttribute.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/containsAttributes.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/copyAttributes.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/EMPTY.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/equals.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/getAttribute.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/getAttributeCount.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/getAttributeNames.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/getResolveParent.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/isDefined.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/isEmpty.java: Likewise,
	* gnu/testlet/javax/swing/text/SimpleAttributeSet/isEqual.java: Likewise,